# nodo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE_NOTE.md  README.md  SECURITY.md  find_div.py  find_dtor.py  find_issues.py  find_issues2.py  find_more_issues.py  old_tcp.cpp  parse_gen.py  parse_test.py  patch.diff  patch.py  run_build.sh  scratch  tcp_0822dcf.cpp
.github/workflows/: ci.yml
.nodo-test/: genesis.nodo  manifest.nodo
.nodo-test/blocks/: block_1.nodo
.nodo-test/keys/: index.nodo  key_local-user.nodo  key_local-validator.nodo
.nodo-test/peers/: local_peer.nodo
.nodo-test/runtime/: runtime_snapshot.nodo
apps/cli/: main.cpp
cmake/: NodoDependencies.cmake
diagnostics/python/: README.md  conftest.py  pyproject.toml  run_failed_tests_diagnostics.py  run_scenarios.py
diagnostics/python/nodo_diag/: __init__.py  artifact_audit.py  assertions.py  base_test.py  cli_runner.py  ctest_runner.py  filesystem_faults.py  generators.py  source_audit.py
diagnostics/python/scenarios/: __init__.py  test_artifact_integrity.py  test_audit_edge_cases.py  test_block_corruption.py  test_cli_flags.py  test_cli_safety.py  test_data_directory.py  test_key_operations.py  test_manifest_fields.py  test_network_isolation.py  test_readiness_and_keys.py  test_regression.py  test_runtime_reload_audit.py  test_security_inputs.py  test_storage_corruption.py
diagnostics/python/src/nodo_diag/: artifact_audit.py  assertions.py  base_test.py  cli_runner.py  ctest_runner.py  filesystem_faults.py  generators.py  source_audit.py
diagnostics/python/src/nodo_diag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
diagnostics/python/tests/: test_failing_ctests_diagnostics.py  test_helpers.py  test_source_persistence_audit.py
diagnostics/reports/: nodo_failure_diagnostics_20260531_204406.json  nodo_failure_diagnostics_20260531_204406.md  nodo_failure_diagnostics_20260531_210402.json  nodo_failure_diagnostics_20260531_210402.md
docs/: ARCHITECTURE.md  CANONICAL_SERIALIZATION_STATE_COMMITMENT.md  CLI.md  CONSENSUS_RULES.md  DEVELOPMENT_MODE.md  ENCRYPTED_PEER_CHANNELS.md  HARDENED_PROTOCOL_FOUNDATION.md  NETWORKED_CONSENSUS_FOUNDATION.md  NETWORKS.md  NODE_DATA_DIRECTORY.md  PERSISTENT_BLOCK_STATE_SYNC.md  PROTOCOL.md  README.md  REAL_TRANSPORT_GOSSIP_MESH.md  ROADMAP.md  SECURITY_MODEL.md  SLASHING_EVIDENCE_VALIDATOR_ACCOUNTABILITY.md  STATE_TRANSITION.md  TCP_TESTNET_NODE_RUNTIME.md  VALIDATOR_PENALTY_APPLICATION.md  roadmap.md  status.md  testnet-local.md
docs/app/: CLI_COMMANDS.md  PRODUCE_DEMO_BLOCK_COMMAND.md  SUBMIT_DEMO_TRANSACTION_COMMAND.md
docs/architecture/: BUILD_SYSTEM.md  CMAKE_TEST_RUNNER.md  architecture-overview.md  module-map.md  storage-and-reload.md
docs/archive/: README.md
docs/config/: GENESIS_CONFIG.md
docs/consensus/: BLOCK_FINALIZATION.md  FORK_CHOICE.md  VALIDATOR_VOTES_AND_QUORUM.md
docs/crypto/: ADDRESS_DERIVATION.md  AUDITED_SIGNATURE_PROVIDER.md  HASH_PROVIDER.md  KEY_MANAGEMENT.md  PHASE_NOTE.md  POST_QUANTUM_PROVIDER_INTERFACES.md  SIGNATURE_PROVIDER.md  cryptography.md
docs/development/: coding-style.md  contributing.md  fast-sync-snapshot.md  governance-chain-audit.md  json-rpc-public-api.md  light-client-events.md  metrics-health-observability.md  production-key-management.md  pruning-modes.md  sync-finality-stabilization.md  sync-pruning-snapshots.md  testing-strategy.md
docs/economics/: COIN_EXISTENCE.md  COIN_LOT_REGISTRY.md  COIN_LOT_TRANSACTION_INTEGRATION.md  EMISSION_POLICY.md  EPOCH_REWARD_DISTRIBUTOR.md  EXPLICIT_TRANSACTION_COIN_LOT_INPUTS.md  GENESIS_REWARD_MAIN_STATE_FLOW.md  IMPLEMENTATION_START.md  LEDGER_RECORD_INTEGRATION.md  NETWORK_RISK_AND_ANTI_SYBIL.md  PROOF_OF_PROTECTION.md  PROTECTION_STATE_REBUILDER.md  README.md  STAKE_AND_SECURITY.md  VALIDATOR_BLOCK_PROPOSAL_SIGNATURE.md  VALIDATOR_PENALTY_RECORDS.md  VALIDATOR_PROPOSAL_REGISTRY.md  VALIDATOR_REGISTRY.md  VALIDATOR_SCORE.md  coin-lots.md  economics-overview.md  monetary-policy.md  rewards.md  staking-rewards-and-penalties.md  supply-and-reports.md
docs/getting-started/: build.md  cli.md  quick-start.md  testing.md
docs/governance/: governance-overview.md  lifecycle-audit.md  vote-evidence.md
docs/operations/: diagnostics-and-observability.md  local-testnet.md  networks-and-data-directory.md  tcp-node-runtime.md
docs/overview/: glossary.md  project-overview.md  proof-of-protection.md
docs/p2p/: P2P_SYNC_FOUNDATION.md
docs/protocol/: blocks-and-finalization.md  consensus.md  networking-and-sync.md  protocol-overview.md  transactions-and-state.md  transactions.md
docs/security/: key-management.md  security-model.md  threat-model.md
docs/serialization/: CANONICAL_SERIALIZATION.md  canonical-serialization.md
docs/treasury/: treasury-execution-evidence.md  treasury-policy.md
include/app/: CommandLineInterface.hpp  DemoScenario.hpp  ProtocolCommandPolicy.hpp
include/config/: GenesisRegistry.hpp  NetworkParameters.hpp  NetworkProfileRegistry.hpp
include/consensus/: BlockFinalizationPhase.hpp  BlockFinalizer.hpp  BlockProductionPhase.hpp  BlockProposalPhase.hpp  BlockVotingPhase.hpp  ChainReorgGuard.hpp  ConsensusEventLoop.hpp  (+17 more)
patches/: protocol_hardening_chain_audit_cli.patch
scripts/: build.bat  build.sh  clean.bat  clean.sh  cmake_build.bat  cmake_build.sh  cmake_build_sanitized.sh  cmake_test_all.bat  cmake_test_all.sh  install_blst.sh  test.bat  test.sh  test_all.bat  test_all.sh  test_canonical_serialization_state_commitment.sh  test_consensus.bat  test_consensus.sh  test_crypto.bat  test_crypto.sh  test_cycle4.bat  test_cycle4.sh  test_cycle5.bat  test_cycle5.sh  test_cycle6.bat  test_cycle6.sh  test_cycle7.bat  test_cycle7.sh  test_cycle8.bat  test_cycle8.sh  test_cycle9.bat  test_cycle9.sh  test_economics.bat  test_economics.sh  test_encrypted_peer_channels.sh  test_mempool.bat  test_mempool.sh  test_networked_consensus_foundation.sh  test_persistent_block_state_sync.sh  test_real_transport_gossip_mesh.sh  test_serialization.bat  (+7 more)
tests/: test_slashing_evidence_validator_accountability.sh
(+1132 files in other folders)
